# airb-n-bini

airb-n-bini-backend/: .gitignore  Cargo.toml
airb-n-bini-backend/entity/: cargo.toml
airb-n-bini-backend/entity/src/: favorite.rs  home.rs  lib.rs  mod.rs  prelude.rs  reservation.rs  user.rs
airb-n-bini-backend/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240305_095038_create_home_table.rs  m20240305_095105_create_favorite_table.rs  m20240305_095122_create_reservation_table.rs
airb-n-bini-backend/src/: main.rs
airb-n-bini-backend/src/controllers/: home_controller.rs  mod.rs  user_controller.rs
airb-n-bini-backend/src/models/: home_model.rs  mod.rs  user_model.rs
airb-n-bini-backend/src/routes/: home_routes.rs  mod.rs  user_routes.rs
airb-n-bini-backend/src/utils/: api_error.rs  constants.rs  mod.rs
airb-n-bini-frontend/: package-lock.json  package.json
airb-n-bini-frontend/src/app/: layout.tsx  page.tsx
airb-n-bini-frontend/src/app/api/auth/register/: route.ts
airb-n-bini-frontend/src/app/create/[id]/structure/: page.tsx
airb-n-bini-frontend/src/components/: MapFilterItems.tsx  SearchComponent.tsx  SelectCategory.tsx  UserNav.tsx
airb-n-bini-frontend/src/services/: api.ts  home.ts
