[package]
name = "airb-n-bini-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
chrono = "0.4.34"
dotenv = "0.15.0"
sea-orm = "0.12.14"
serde = "1.0.197"
tokio = {version="1.36.0",features = ["full"]}
tower-cookies = "0.10.0"
tower-http = "0.5.2"
uuid = "1.7.0"
